--- a/src/styles/blocks/sections/_main.scss
+++ b/src/styles/blocks/sections/_main.scss
@@ -1,2 +1,6 @@
 @import './components/_main.scss';
 @import './pages/_main.scss';
+@import './pages/hero.scss';
+@import './pages/our-activities.scss';
+@import './pages/partners.scss';
+@import './pages/news.scss';
