--- a/src/styles/blocks/sections/components/header.scss
+++ b/src/styles/blocks/sections/components/header.scss
@@ -1,11 +1,30 @@
 header {
-    position: sticky;
-    z-index: 47;
-    top: -1px;
-    transform: translateY(0);
-    transition: transform 0.3s ease;
-    width: 100%;
-    &_sticky-hidden {
-        transform: translateY(-100%);
+    margin-top: 1.9375rem;
+    margin-inline: auto;
+    width: 81.375rem;
+    height: 6.3125rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .logo {
+        width: 6.3125rem;
+        height: 6.3125rem;
+    }
+    nav {
+        ul {
+            display: flex;
+            align-items: center;
+            gap: 4.625rem;
+            li {
+
+            }
+        }
+    }
+    button {
+        padding: 0.625rem;
+        border: 0.1875rem solid #EB655A;
+        border-radius: 0.625rem;
+        color: #000;
+        font-size: 1.25rem;
     }
 }
