--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -34,6 +34,7 @@ main {
     .main-border {
         border: 0.4375rem solid #6B81BD;
         border-radius: 3.125rem;
+        overflow: hidden;
     }
 }
 
