--- a/src/styles/blocks/sections/_main.scss
+++ b/src/styles/blocks/sections/_main.scss
@@ -4,3 +4,6 @@
 @import './pages/our-activities.scss';
 @import './pages/partners.scss';
 @import './pages/news.scss';
+@import './pages/employees.scss';
+@import './pages/help.scss';
+@import './pages/stickers.scss';
