--- a/src/styles/blocks/sections/pages/news.scss
+++ b/src/styles/blocks/sections/pages/news.scss
@@ -16,16 +16,28 @@
         row-gap: 5.625rem;
         .item {
             width: 24.1875rem;
-            height: 19.9375rem;
+            height: 24.1875rem;
             padding: 0.75rem 2.0625rem;
             @include df_fdc;
             gap: 0.9375rem;
             .container-img {
                 max-width: 21.0625rem;
+                overflow: hidden;
                 img {
                     width: 100%;
                 }
             }
+            .text {
+                padding-inline: 0.5625rem;
+                font-weight: 300;
+                font-size: 0.875rem;
+                color: #000;
+            }
         }
     }
+}
+
+.h-full {
+    width: fit-content;
+    height: 100%;
 }
